--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,1 +1,6 @@
-<p>footer works!</p>
+<footer>
+  <div class="logo-group">
+    <img src="./assets/img/order-icon.png" alt="order-icon">
+    <span class="logo-title">&Ouml;RDER</span>
+  </div>
+</footer>
