--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,1 +1,12 @@
-<p>header works!</p>
+<header>
+  <div class="logo-group">
+    <img src="./assets/img/order-icon.png" alt="order-icon">
+    <span class="logo-title">&Ouml;RDER</span>
+  </div>
+  <nav role="navigation">
+    <a href='#'>Customers</a>
+    <a href='#'>Nav #2</a>
+    <a href='#'>Nav #3</a>
+    <a href='#'>Nav #4</a>
+  </nav>
+</header>
