--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -4,7 +4,7 @@
     <span class="logo-title">&Ouml;RDER</span>
   </div>
   <nav role="navigation">
-    <a href='#'>Customers</a>
+    <a routerLink="/items">Items</a>
     <a href='#'>Nav #2</a>
     <a href='#'>Nav #3</a>
     <a href='#'>Nav #4</a>
