--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,6 @@
 }
 
 body {
-  height: 1200px;
   font-size: 18px;
   font-family: Verdana, sans-serif;
   color: #5D6063;
@@ -41,7 +40,7 @@ a:visited {
 
 nav {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 nav > a {
