--- a/src/styles.css
+++ b/src/styles.css
@@ -170,10 +170,12 @@ form {
 
   text-align: center;
   margin-bottom: .5rem;
+  cursor: pointer;
 }
 
 .card-image {
   margin-bottom: .5rem;
+  cursor: pointer;
 }
 
 .card-footer {
@@ -196,4 +198,11 @@ form {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+}
+textarea {
+  width: 100%;
+  height: 100px;
+}
+.errorText {
+  color: red;
 }
