--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -5,7 +5,7 @@
   </div>
   <nav role="navigation">
     <a routerLink="/items">Items</a>
-    <a href='#'>Nav #2</a>
+    <a routerLink="/customers">Customers</a>
     <a href='#'>Nav #3</a>
     <a href='#'>Nav #4</a>
   </nav>
